--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('background.jpg') no-repeat center center;
+    background: url('fondo.jpg') no-repeat center center;
     background-size: cover;
     color: white;
     text-align: center;
